# akha-xss

./: .gitattributes  .gitignore  LICENSE  README-TR.md  README.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
.github/workflows/: quality-gate.yml
akha/: __init__.py  __main__.py
akha/cli/: __init__.py  base.py  commands.py  handlers.py  output.py  plugins.py
akha/core/: async_runner.py  auth_plugins.py  config.py  http_client.py  pipeline.py  scanner.py  session.py  task_queue.py
akha/modules/: crawler.py  interactsh_client.py  param_finder.py  waf_detector.py
akha/payloads/: __init__.py  database.py  encoder.py  generator.py  learning.py  manager.py  mutator.py  planner.py  smart_engine.py
akha/reports/: __init__.py  html_generator.py  json_generator.py
akha/smart_layer/: __init__.py  context_detector.py  mutator.py  (+2 more)
tests/: test_cli_config_mapping.py  test_context_diff_payload_engine.py  test_distributed_task_queue.py  test_false_positive_hardening.py  test_golden_target_regression.py  test_graphql_mxss.py  test_http_client_hardening.py  test_module_hardening.py  test_packaging_metadata_consistency.py  test_param_discovery_regression.py  test_payload_intelligence.py  test_payloads.py  test_phase1_verification_enhancements.py  test_phase2_discovery_prioritization.py  test_phase3_http_waf_adaptation.py  test_pipeline_contracts.py  test_quality_gate_tool.py  test_regressions.py  test_scanner.py  test_smart_validator.py
tools/: benchmark_payloads.py  benchmark_section4_signals.py  quality_gate.py  validate_candidates_playwright.py
(+19 files in other folders)
